[gd_scene load_steps=13 format=2]

[ext_resource path="res://Santa Claus/Sprites/Child1.png" type="Texture" id=1]
[ext_resource path="res://Santa Claus/Verification/Sprites/Room Door.png" type="Texture" id=2]
[ext_resource path="res://InteractableArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Santa Claus/Verification/Test/ChildVF.gd" type="Script" id=4]
[ext_resource path="res://Santa Claus/Sprites/gift1.png" type="Texture" id=5]
[ext_resource path="res://Santa Claus/Sprites/Smiley.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 11.5 )

[sub_resource type="Animation" id=5]
resource_name = "Give Gift"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("GiftSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GiftSprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.9, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -33.0, -8.0, -8.0, -8.0, -33.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HappinessSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HappinessSprite:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -16.0, -32.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ChildSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Give Nothing"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("HappinessSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HappinessSprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -16.0, -32.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChildSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ChildSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Indicator Pop-Up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("HappinessSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HappinessSprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -16.0, -32.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChildSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GiftSprite:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -33.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GiftSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HappinessSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HappinessSprite:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -16.0 ]
}

[node name="ChildVF" type="Node2D"]
script = ExtResource( 4 )

[node name="DoorSprite" type="Sprite" parent="."]
position = Vector2( -2, -24 )
texture = ExtResource( 2 )

[node name="HappinessSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 5, -16 )
texture = ExtResource( 6 )

[node name="ChildSprite" type="Sprite" parent="."]
position = Vector2( 4, -16 )
texture = ExtResource( 1 )
hframes = 2

[node name="GiftSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -9, -33 )
texture = ExtResource( 5 )

[node name="InteractableArea" parent="." instance=ExtResource( 3 )]
enabled = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2( 10, -12 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Give Gift" = SubResource( 5 )
"anims/Give Nothing" = SubResource( 8 )
anims/Idle = SubResource( 7 )
"anims/Indicator Pop-Up" = SubResource( 9 )
anims/RESET = SubResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
